@@ -1,3 +1,5 @@
+2013-03-05: Add remote metadata support.
+
 2013-03-04: More extended metadata.
 
 2013-03-01: Support an rcfile and supply an example file.
